// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList actions should fetchAccountsStatus 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "error": "Cannot read property 'data' of undefined",
      },
      "type": "YUPANA_ACCOUNT_STATUS_POLLING_ERROR",
    },
  ],
]
`;

exports[`AccountList actions should startAccountStatusPolling 1`] = `
Object {
  "payload": Object {
    "pollingProcessID": 0,
  },
  "type": "YUPANA_ACCOUNT_STATUS_POLLING_START",
}
`;

exports[`AccountList actions should stopAccountStatusPolling 1`] = `
Array [
  Array [
    Object {
      "type": "YUPANA_ACCOUNT_STATUS_POLLING_STOP",
    },
  ],
]
`;
